! The expand/collapse icons on the quick reply and the ticket action log were not in line with each other, which looked bad. [Bug 484]

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -187,6 +187,8 @@ h3.ticketheader img
 #shd_ticket_log_expand
 {
 	margin-top: 8px;
+	position: relative;
+	left: 4px;
 }
 .shd_ticket_log_expand_container
 {
